# Splatlogger

./: .gitignore  LICENSE  LICENSE.md  README.md  common.py  data.py  logger.py  main.py  match_logger.py  names.py  pyproject.toml  tcpgecko.py  tcpgecko_aroma.py
src/splatlogger/: __main__.py  data.py  match_logger.py  tcpgecko.py  tcpgecko_aroma.py
