[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Splatlogger"
version = "1.5"
authors = [
    { name="Shadow Doggo", email="shadowdoggo@protonmail.com" }
]
description = "A PID/PNID grabber and match logger for Splatoon using TCPGecko."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "userpaths",
    "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
"Source Code" = "https://github.com/spoongaming61/Splatlogger"

[project.scripts]
splatlogger = "splatlogger.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["splatlogger*"]
